--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     RECEIVING
   </div>
   <div class="header nodisplay">
-    JADOO v1 BY <a href="https://www.instagram.com/mr_arpit_08/">Developer Arpit</a>
+    JADOO v1 BY <a href="https://www.instagram.com/_ajest_0610?igsh=MTRzbnl0N2RxbGUwcg==">Developer Ajest</a>
   </div>
 
 <div class="sea sea-left nodisplay">
